Main uses full code from demo_2